--- a/2/2.1/index.html
+++ b/2/2.1/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <select name="" id="variant">
+        <option value="">Select</option>
+        <option value="1">for</option>
+        <option value="2">for in</option>
+        <option value="3">for of</option>
+        <option value="4">forEach</option>
+        <option value="5">map</option>
+        <option value="6">get</option>
+    </select>
+    <button onclick="cycle()">Try it</button>
     <script src="js/main.js"></script>
 </body>
 
