1-st module fix

--- a/1/1.7/index.html
+++ b/1/1.7/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <select name="" id="variant">
+        <option value="">Select</option>
+        <option value="1">!()</option>
+        <option value="2">Without !()</option>
+        </select>
+    <button onclick="check()">Check</button>
     <script src="js/main.js"></script>
 </body>
 
